RESOLVED FIXED191971
Web Inspector: REGRESSION(r238378): reloading WebInspector after a settings change doesn't re-show WebInspector
https://bugs.webkit.org/show_bug.cgi?id=191971
Summary Web Inspector: REGRESSION(r238378): reloading WebInspector after a settings c...
Devin Rousso
Reported 2018-11-26 10:29:37 PST
* STEPS TO REPRODUCE: 1. Open WebInspector 2. Go to the Settings tab 3. Check/Uncheck any setting that requires a reload (e.g. any experimental setting for enabling a tab) 4. Click "Reload Web Inspector" => WebInspector closes and doesn't re-show
Attachments
[PATCH] Proposed Fix (4.67 KB, patch)
2018-11-27 15:21 PST, Joseph Pecoraro
mattbaker: review+
joepeck: commit-queue-
[PATCH] Proposed Fix (5.95 KB, patch)
2018-11-27 17:02 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2018-11-27 15:21:11 PST
Created attachment 355794 [details] [PATCH] Proposed Fix
Radar WebKit Bug Importer
Comment 2 2018-11-27 15:25:41 PST
Matt Baker
Comment 3 2018-11-27 15:32:11 PST
Comment on attachment 355794 [details] [PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 4 2018-11-27 16:14:22 PST
Comment on attachment 355794 [details] [PATCH] Proposed Fix Hmm this has a bit of a problem in that close() triggers a DidClose message from the WebProcess which may cause us to try to disconnect after we establish a connection here... A debug build asserts. Let me try something else.
Joseph Pecoraro
Comment 5 2018-11-27 17:02:11 PST
Created attachment 355824 [details] [PATCH] Proposed Fix Avoid calling a disconnectFrontend unless we were actually connected.
Matt Baker
Comment 6 2018-11-27 17:05:55 PST
Comment on attachment 355824 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 7 2018-11-28 09:51:56 PST
Comment on attachment 355824 [details] [PATCH] Proposed Fix Clearing flags on attachment: 355824 Committed r238617: <https://trac.webkit.org/changeset/238617>
WebKit Commit Bot
Comment 8 2018-11-28 09:51:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.