Source/WebKit/WebProcess/WebPage/WebInspector.cpp
@@ -142,12 +142,6 @@ void WebInspector::close()
     closeFrontendConnection();
 }
 
-void WebInspector::reopen()
-{
-    close();
-    show();
-}
-
 void WebInspector::openInNewTab(const String& urlString)
 {
     UserGestureIndicator indicator { ProcessingUserGesture };
