Source/WebKit/WebProcess/WebPage/WebInspector.h
@@ -52,7 +52,6 @@ public:
 
     void show();
     void close();
-    void reopen();
 
     void openInNewTab(const String& urlString);
 
